# contrasleuth

./: .gitmodules  LICENSE  POSTMORTEM.md  README.md
backend/: .gitignore  Cargo.toml  Cross.toml  build.rs  install-cross-compilation-images.sh
backend/async-std/: Cargo.toml  README.md
backend/capnp/: message.capnp  reconcile.capnp
backend/contrasleuth-crosscompile-images/arm-linux-androideabi/: Dockerfile
backend/parlance-crosscompile-images/armv7-linux-androideabi/: Dockerfile
backend/parlance-crosscompile-images/i686-linux-android/: Dockerfile
backend/sql/A. Schema/: Initial schema for backend.sql  Initial schema for frontend - 1. User version.sql  Initial schema for frontend - 10. Index message derivation table.sql  Initial schema for frontend - 11. Index message derivation table (Inbox ID).sql  Initial schema for frontend - 12. Index message derivation table (Global ID).sql  Initial schema for frontend - 13. Index message derivation table (Inventory ID).sql  Initial schema for frontend - 2. Foreign keys.sql  Initial schema for frontend - 3. Inbox table.sql  Initial schema for frontend - 4. Message table.sql  Initial schema for frontend - 5. Message derivation table.sql  Initial schema for frontend - 6. Contact table.sql  Initial schema for frontend - 7. Index message table.sql  Initial schema for frontend - 8. Index message table (Inbox ID).sql  Initial schema for frontend - 9. Index message table (Global ID).sql
backend/sql/B. RPC/: Delete message.sql  Put message.sql  Retrieve message.sql  Retrieve messages.sql
backend/sql/C. Frontend/: Count derivations.sql  Create inbox.sql  Delete all derivations.sql  Delete all messages.sql  Delete contact.sql  Delete derivation.sql  Delete inbox.sql  Delete message.sql  Fetch contacts.sql  Fetch derivations by inventory item.sql  Fetch derivations.sql  Fetch inbox.sql  Fetch inboxes.sql  Fetch message.sql  Fetch messages.sql  Get message type.sql  Insert contact.sql  Insert derivation.sql  Insert message.sql  Update autosave preference.sql  Update contact label.sql  Update inbox label.sql  Update public half.sql  (+1 more)
backend/src/: connect.rs  derive_state.rs  init_inventory.rs  inventory.rs  log.rs  main.rs  message_hash.rs  mockable_date_and_time.rs  mpmc_manual_reset_event.rs  private_box.rs  proof_of_work.rs  reconcile_client.rs  reconcile_server.rs  state_derive_ipc.rs  stdio_ipc.rs
quic-interpreter/: Cargo.toml
quic-interpreter/src/: main.rs
userspace-ip/: .gitignore  Makefile.am  NOTES.txt  configure.ac  enumerate_library_files.sh  lwipopts.h  main.c
userspace-ip/netif/: sio.c  tapif.c
(+129 files in other folders)
