[package]
name = "quic-interpreter"
version = "0.1.0"
authors = ["Huỳnh Trần Khanh <qcdz9r6wpcbh59@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quiche = "0.5.1"
sodiumoxide = "0.2.6"
async-std = { version = "1.6.2", features = ["unstable"] }
futures = "0.3.5"
base64 = "0.12.3"
rand = "0.7.3"
